# homelab

./: .env.erb  .gitignore  .gitignore.erb  .tool-versions  Gemfile  README.md  Rakefile  docker-bake.json  docker-bake.json.erb  hosts.yml
ansible/: ansible.cfg  chrony.yaml  coredns.yaml  docker.yaml  firewall.yaml  generate_host_compose.rb  hypervisor.yaml  inventory.rb  main.yaml  node_exporter.yaml  serials.yaml  stacks.yaml  tailscale.yaml  tasks.rake
configs/: dockerstack.cron.erb
dns/: Dockerfile  README.md  Rakefile.docker  app.yaml  creds.json.ci  creds.json.erb  dnsconfig.js  kustomization.yaml  local_ingress.js.erb  protect-cert-sync.yaml  public_ingress.js.erb  shared_tasks.rb  tasks.rake  wildcard.yaml
fly-proxy/: 00-start-tailscale.sh  Dockerfile  fly.toml  proxy.conf  proxy.conf.erb  sync_fly_certs.rb  tasks.rake
hack/: jellyfin-sync-pod.yaml  ucore-autorebase.butane
lib/: baker.rb  composer.rb  config.rb  context.rb  ds_logger.rb  hooks.rb  host.rb  host_builder.rb  hosts_file.rb  runner.rb  secrets.rb  service.rb  stack.rb  tailscale.rb  task_common.rb  template_renderer.rb
playbooks/: chrony.yaml  coredns.yaml  docker.yaml  hypervisor.yaml  main.yaml  ping.yaml  stacks.yaml
scripts/: generate_host_compose.rb  inventory.rb  nuke_containers.sh  run_ci.rb  (+1 more)
stacks/agent/: Dockerfile  app.yaml  hello.py  pyproject.toml  pyproject.toml.bak  run.sh  test.json
stacks/agent/agent/: hass.py  server.py
stacks/hass-rag/: .dockerignore  Dockerfile  README.md  api.py  client.py  docker-compose.yml  main.py  pyproject.toml  query.py  query2.py
(+401 files in other folders)
